# advent-of-code-2024

./: CMakeLists.txt  day1.cpp  day2.cpp
